site: Add toc to 0c5149d23e3f3fcd69d874a8154ef1d05edcc216 [ff]

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -101,6 +101,13 @@
                         <li class="document-current">«&nbsp;The Stockholm RichText-Editor Lecture Lessons&nbsp;»</li>
                         <li class="document-next"><a href="categories.html">Categories&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
+
+                    <ol class="styx-counter">
+                        <li><a href="#LLI">The Stockholm Lecture Lesson I.</a></li>
+                        <li><a href="#LLII">The Stockholm Lecture Lesson II.</a></li>
+                        <li><a href="#LLIII">The Stockholm Lecture Lesson III.</a></li>
+                    </ol>
+
                     <h2>A preface about HTML and RichText Editors</h2>
 
                     <p>HTML RichText editors are self-contained Javascript programs. They are as good as their creators and programmers intended and developed them to be at the current state.<br />
@@ -128,7 +135,7 @@
                     <p>The <code>div</code>-tag element already mentioned is a generic block element in HTML without a fixed meaning and is therefore used in principle whenever one wants to achieve a structured container that gets the desired properties from its inner elements, and/or is additionally "styled" with the page description language CSS.<br />
                     The repair measures of a RichText editor are naturally fond of such DIV-tags and nest the damaged or not valid structures rather more than less.</p>
 
-                    <p>&nbsp;</p>
+                    <p>&nbsp;<a href="#" id="LLI"></a></p>
 
                     <h2>Stockholm Lecture Lessons I.</h2>
 
@@ -174,7 +181,7 @@
 
                     <div><picture><source srcset="/i/x/blog_entry_source_example.avif" type="image/avif"><source srcset="/i/x/blog_entry_source_example.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/blog_entry_source_example.png" width="800" height="360"></picture></div>
 
-                    <p>&nbsp;</p>
+                    <p>&nbsp;<a href="#" id="LLII"></a></p>
 
                     <h2>Stockholm Lecture Lessons II.</h2>
 
@@ -290,9 +297,10 @@
 
                     <p>Checking the written or added content by the RichText-Editors "Source" button will always quickly show you that you have worked the right way or not.</p>
 
-                    <p>&nbsp;</p>
+                    <p>&nbsp;<a href="#" id="LLIII"></a></p>
 
-                    <h3>Good to know conclusions</h3>
+                    <h3>The Stockholm Lecture Lesson III.</h3>
+                    <h5>Good to know conclusions</h5>
 
                     <p>There are cases where this EDITOR and YOU can get into <strong>conflicts</strong>. Assume you write text with images and then you notice that an image was not the one you really wanted to have - OR - it would better look when placed somewhere else - and so on.</p>
 
