site: Fix typo in a3f2c452dd3c7c72d495f5b5de1bb4bf3a2d7684

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -217,9 +217,7 @@
                     <div><picture><source srcset="/i/x/Claude_Monet.avif" type="image/avif" /><source srcset="/i/x/Claude_Monet.webp" type="image/webp" /><img alt="" class="serendipity_image_center" height="603" loading="lazy" src="/i/x/Claude_Monet.jpg" width="800" /></picture></div>
 
                     <div><picture><source srcset="/i/x/Duerer-Mutter-Barbara.avif" type="image/avif" /><source srcset="/i/x/Duerer-Mutter-Barbara.webp" type="image/webp" /><img alt="" class="serendipity_image_center" height="800" loading="lazy" src="/i/x/Duerer-Mutter-Barbara.jpg" width="585" /></picture></div>
-<!--
-                    <div><picture><source srcset="/i/x/avicenna.avif" type="image/avif" /><source srcset="/i/x/avicenna.webp" type="image/webp" /><img alt="" class="serendipity_image_center" height="470" loading="lazy" src="/i/x/avicenna.jpg" width="800" /></picture></div>
--->
+
                     <div><picture><source srcset="/i/x/Caspar_David_Friedrich_Zwei_Maenner_am_Meer_1817.avif" type="image/avif" /><source srcset="/i/x/Caspar_David_Friedrich_Zwei_Maenner_am_Meer_1817.webp" type="image/webp" /><img alt="" class="serendipity_image_center" height="596" loading="lazy" src="/i/x/Caspar_David_Friedrich_Zwei_Maenner_am_Meer_1817.jpeg" width="800" /></picture></div>
 
                     <p>("<em>Images, courtesy of CC licensing https://creativecommons.org/licenses/</em>")</p>
@@ -252,7 +250,7 @@
                         Select a next image.</li>
                         <li>Scroll down as much as you can. It now is different to the first, since there will be a next added (empty) line under the last image and you will not see a red line, hovering over !!!<br>
                         Place your cursor at the far most ending space.<br>
-                        Hit BACKSPACE-key. (<em>The editor line jumps one up and the red magic line will appear. If not, there was an additional space added, which now was deleted by the this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
+                        Hit BACKSPACE-key. (<em>The editor line jumps one up and the red magic line will appear. If not, there was an additional space added, which now was deleted by this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
                         Hit the red magic line (<em>and the editor line jumps down</em>).<br>
                         Select another image.</li>
                         <li>Run N° 6 again for the fourth image to add</li>
