--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -152,7 +152,7 @@
 
                     <p><pre><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus nisi sit amet turpis placerat lacinia sit amet at lacus. Cras nec porta nisi. Aliquam lobortis nisi eget turpis blandit rhoncus. Cras placerat accumsan lacus, tristique pellentesque tortor condimentum ut. In hac habitasse platea dictumst. Integer fermentum, velit a vehicula porttitor, leo nunc imperdiet est, vitae imperdiet ipsum velit a sapien. Nulla quis justo in magna porttitor sodales eu non sapien. Sed consequat lectus diam, vehicula dictum nulla. Sed rutrum mollis enim, in posuere tortor congue sed. Duis ante arcu, bibendum sit amet eleifend ac, molestie eget elit. Integer risus lacus, dapibus ut commodo eu, laoreet at odio. Curabitur varius, urna ac tincidunt gravida, eros dui consectetur nunc, euismod consequat turpis urna non libero.</code></pre></p>
 
-                    <p><sup>(¹)</sup> PLEASE NOTE: When you copy text from HTML pages like this page, it has the downside that you also copy the inner belonging HTML tags. When you have a plain text editor and you there paste the selected text, no tags are shown. But In this case, pasting to a RichText Editor, the HTML-tags are ported. For this special lecture case we do not want this behaviour. For luck there is another keyboard command available to paste text without belonging HTML-tags. This is the keyboard shortcut [Shift] - [Command-Option] - [v]. With this command you can paste the text that you want with the original formatting stripped out.</p>
+                    <blockquote><p><sup>(¹)</sup> PLEASE NOTE: When you copy text from HTML pages like this page, it has the disadvantage that you also copy the inner belonging HTML tags. When you have a plain text editor and you there paste the selected text, no tags are shown. But in this case, pasting to a RichText Editor, the HTML-tags are ported. For this special lecture case we do not want this behaviour. For luck there is another keyboard command available to paste text without belonging HTML-tags. This is the keyboard shortcut [Shift] - [Command-Option] - [v]. With this command you can paste the text that you want with the original formatting stripped out.</p></blockquote>
 
                     <p>Paste the copied text to your new entry.<br>
                     Click on the blog editors "Source" button and view the result.<br>
@@ -334,11 +334,15 @@
 
                     <p>Leaving the possible crumble by these (inter)-actions between you and the ACF as is, is no option ! Repairing it in the source, needs HTML structure knowledge ! This is why certain and here described techniques are mandatory to learn !! 😁 <em>And, let me say it this way: Every human being is using techniques to achieve it goals...</em> 🐒 💝</p>
 
-                    <p><em>To be continued...</em></p>
+                    <blockquote><p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !<br>There is another way, which is using the magic red line on top of your blog entry (yes, here it can appear also). Hitting this top red magic line places a new block above the first image. With this action you have "jumped" out the <code>div</code>-ed image container block and your are now able to run the DEL keyboard key. This deletes the first image container block, but leaves artifacts again. We have learned that we should avoid having those for current (and future) purposes. So don't do this either!</em></p></blockquote>
+
+                    <p>All you have to know and learn is to open the Source and delete the entire image block by hand. Simple and clean.</p>
+
+                    <p>You have learned that your RichText Editor is using the HTML element technique <code>p</code> for text paragraphs and <code>div</code> for other (nested) container blocks. So, if you find <code>&lt;p&gt;&amp;nbsp;&lt;/p&gt;</code> kind of source code parts in your current written blog entry, this is a paragraphed text block with <strong>one</strong> (<em>as HTML entity</em>) single space item (<em>since you need at least one</em>) waiting for the users next input. Now you also know where this single space item comes from, that we previously remove(d) with our BACKSPACE key action.<br>There actually is <strong>no</strong> real need to have and leave empty (but interpreted) containers like this in your blog entries, specifically at the very end. If you do it, then only for extra needed linespace separators.</p>
+
+                    <p><em>To be continued... (maybe...)</em></p>
 
                     <p>&nbsp;</p>
-
-                    <p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !</em></p>
 
                 </div>
             </div>
