site: Fix typo in 4e86b6df5717fa7440739f2849700047487c334c

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -330,7 +330,7 @@
 
                     <p><u>Making it short:</u> Delete block containers like this <strong>only</strong> via the "Source" view mode! <strong>Easy</strong> - <strong>Clean</strong> - and <strong>Straight</strong> forward !</p>
 
-                    <p>At this state is is good to know that this RichText-Editor has a "butler" (which is called "ACF"). This "butler" checks for (un-)valid code and then tries to repair it. These repairs don't always look like clean and straight HTML, but are at least valid, since unbroken. These automatic ACF (<em>cleanup</em>) actions always happen when you switch between the <strong><em>RichText-view-mode</em></strong> and the <strong><em>Source-view-mode</em></strong> and vice versa <strong>and</strong> when you <strong>save</strong> your entry.</p>
+                    <p>At this state it is good to know that this RichText-Editor has a "butler" (which is called "ACF"). This "butler" checks for (un-)valid code and then tries to repair it. These repairs don't always look like clean and straight HTML, but are at least valid, since unbroken. These automatic ACF (<em>cleanup</em>) actions always happen when you switch between the <strong><em>RichText-view-mode</em></strong> and the <strong><em>Source-view-mode</em></strong> and vice versa <strong>and</strong> when you <strong>save</strong> your entry.</p>
 
                     <p>Leaving the possible crumble by these (inter)-actions between you and the ACF as is, is no option ! Repairing it in the source, needs HTML structure knowledge ! This is why certain and here described techniques are mandatory to learn !! 😁 <em>And, let me say it this way: Every human being is using techniques to achieve it goals...</em> 🐒 💝</p>
 
