--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -246,12 +246,12 @@
                         <li>Place cursor at text end.<br>
                         Hit the keyboard RETURN-key ("ENTER").<br>
                         Then select an image to the entry.</li>
-                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red magic line appears. Click on it. (<em>The editor line jumps down.</em>)<br>
+                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red magic line appears. Click on its red "action button" at the end. (<em>The editor line jumps down.</em>)<br>
                         Select a next image.</li>
                         <li>Scroll down as much as you can. It now is different to the first, since there will be a next added (empty) line under the last image and you will not see a red line, hovering over !!!<br>
                         Place your cursor at the far most ending space.<br>
                         Hit BACKSPACE-key. (<em>The editor line jumps one up and the red magic line will appear. If not, there was an additional space added, which now was deleted by this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
-                        Hit the red magic line (<em>and the editor line jumps down</em>).<br>
+                        Hit the red magic lines "action button" (<em>and the editor line jumps down</em>).<br>
                         Select another image.</li>
                         <li>Run N° 6 again for the fourth image to add</li>
                         <li>Run N° 6 again for the fifth image to add</li>
@@ -282,7 +282,7 @@
                         <li>Place cursor to the (<em>empty</em>) body field and hit the RETURN-("ENTER")-keyboard key (<em>Editor line jumps down</em>). Then hit BACKSPACE-key (Editor line jumps up again).<br>
                         - OR -</li>
                         <li>Order and select the image. It appears.</li>
-                        <li>Now hover with your mouse cursor and watch the red magic line appearance right below image end. To close this first image container block and run another image block container, hit the red line (<em>your editors line jumps down again</em>).</li>
+                        <li>Now hover with your mouse cursor and watch the red magic line appearance right below image end. To close this first image container block and run another image block container, hit the red lines "action button" (<em>your editors line jumps down again</em>).</li>
                         <li>Order and select another image.</li>
                         <li>Now, the same as already described in the first lesson II. variant happens. The second image does not end with a red magical line and has already a new real line added at the very end. Place your cursor at the far most ending of that new line. (<em>To check you really are at the real very end you can always use your keyboards arrow keys (<cite>down-arrow</cite> and <cite>right-arrow</cite>), since they move your cursor and are more strict and exact than your mouse actions for placing probably can be.</em>) Then hit your BACKSPACE-key once. You will see the cursor moves left a little bit. This action has deleted the additional space (<em>which is a, or better say the same space like in-between words added by the (long) SPACEBAR-keyboard key</em>). Another hit of your BACKSPACE-keyboard key would now make this new line move up and the red magic line would be available again.</li>
                         <li>At this point, if you now want to write some text for example, just use that new space line, after you hit BACKSPACE-key once to remove the additional added space.</li>
@@ -334,7 +334,7 @@
 
                     <p>Leaving the possible crumble by these (inter)-actions between you and the ACF as is, is no option ! Repairing it in the source, needs HTML structure knowledge ! This is why certain and here described techniques are mandatory to learn !! 😁 <em>And, let me say it this way: Every human being is using techniques to achieve it goals...</em> 🐒 💝</p>
 
-                    <blockquote><p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !<br>There is another way, which is using the magic red line on top of your blog entry (yes, here it can appear also). Hitting this top red magic line places a new block above the first image. With this action you have "jumped" out the <code>div</code>-ed image container block and your are now able to run the DEL keyboard key. This deletes the first image container block, but leaves artifacts again. We have learned that we should avoid having those for current (and future) purposes. So don't do this either!</em></p></blockquote>
+                    <blockquote><p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !<br>There is another way, which is using the magic red line on top of your blog entry (yes, here it can appear also). Hitting this top red magic lines "action button" places a new block above the first image. With this action you have "jumped" out the <code>div</code>-ed image container block and your are now able to run the DEL keyboard key. This deletes the first image container block, but leaves artifacts again. We have learned that we should avoid having those for current (and future) purposes. So don't do this either!</em></p></blockquote>
 
                     <p>All you have to know and learn is to open the Source and delete the entire image block by hand. Simple and clean.</p>
 
