site: Be more consistent for BACKSPACE key naming in 261e2580909744056f4fdd35ab7b1e049f6fcb9d and 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -181,7 +181,7 @@
 
                     <div><picture><source srcset="/i/x/blog_entry_source_example.avif" type="image/avif"><source srcset="/i/x/blog_entry_source_example.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/blog_entry_source_example.png" width="800" height="360"></picture></div>
 
-                    <p><strong>Conclusion:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the DEL-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use the RETURN followed by DEL to style that text part, even if you haven't cared about it right in the beginning.</p>
+                    <p><strong>Conclusion:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the BACKSPACE-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use the RETURN followed by BACKSPACE to style that text part, even if you haven't cared about it right in the beginning.</p>
 
                     <p>&nbsp;<a href="#" id="LLII"></a></p>
 
@@ -338,7 +338,7 @@
 
                     <p>Leaving the possible crumble by these (inter)-actions between you and the ACF as is, is no option ! Repairing it in the source, needs HTML structure knowledge ! This is why certain and here described techniques are mandatory to learn !! 😁 <em>And, let me say it this way: Every human being is using techniques to achieve it goals...</em> 🐒 💝</p>
 
-                    <blockquote><p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !<br>There is another way, which is using the magic red line on top of your blog entry (yes, here it can appear also). Hitting this top red magic lines "action button" places a new block above the first image. With this action you have "jumped" out the <code>div</code>-ed image container block and your are now able to run the DEL keyboard key. This deletes the first image container block, but leaves artifacts again. We have learned that we should avoid having those for current (and future) purposes. So don't do this either!</em></p></blockquote>
+                    <blockquote><p><em><sup>(²)</sup> Yeah, it is not that easy to remove the first example image in RT-mode. Even simpler would it be to mark and cut it, which would return a slight different "source" result. But also nothing we want to acquire. So, don't do it !<br>There is another way, which is using the magic red line on top of your blog entry (yes, here it can appear also). Hitting this top red magic lines "action button" places a new block above the first image. With this action you have "jumped" out the <code>div</code>-ed image container block and your are now able to run the BACKSPACE keyboard key. This deletes the first image container block, but leaves artifacts again. We have learned that we should avoid having those for current (and future) purposes. So don't do this either!</em></p></blockquote>
 
                     <p>All you have to know and learn is to open the Source and delete the entire image block by hand. Simple and clean.</p>
 
