site: More wording in c1084478c9fae09dbd275dc52fed37611a65b372

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -181,7 +181,7 @@
 
                     <div><picture><source srcset="/i/x/blog_entry_source_example.avif" type="image/avif"><source srcset="/i/x/blog_entry_source_example.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/blog_entry_source_example.png" width="800" height="360"></picture></div>
 
-                    <p><strong>Conclusion:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the BACKSPACE-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use key RETURN followed by BACKSPACE to style that text part, even if you haven't cared about it right in the beginning.</p>
+                    <p><strong>In a nutshell:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the BACKSPACE-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use key RETURN followed by BACKSPACE to style that text part, even if you haven't cared about it right in the beginning.</p>
 
                     <p>&nbsp;<a href="#" id="LLII"></a></p>
 
