site: Extend 3e44f3fc093c089e96504f21d2bb10902c718adb

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -189,10 +189,10 @@
 
                     <p>This example lecture II. assumes that you want to enter a blog text that is enriched with additional images. The images to use you have already uploaded to Serendipity Styx and you do know that now always additional to the actually uploaded image a smaller preview (thumb) version of the image exists.</p>
 
-                    <p>With these two image occurrences alone, various image container nests are possible, be it via hyperlinks and only as a pure image display, as an additional image comment, by further placements on the page, or further image properties, and/or as a (recommended) "media container" with further image variations of the same.</p>
+                    <p>With these two image occurrences alone, various (image) container nests are possible, be it via hyperlinks, or only as a pure image display, as an additional image comment, by further placements on the page, or further image properties, and/or as a (recommended) "media container" with further image variations of the same. (a.s.on)</p>
 
                     <p>The following example that gave rise to this documentation is based on a very simple case.<br />
-                    This case is, that you want to display the image always in the center and therefore separated from the text as a full-size image, so that your blog entry consists only of text blocks (paragraphs) and images. Simplified as a scheme:</p>
+                    This case is, that you want to display the image always (standalone) in the center and therefore separated from the text as a full-size image, so that your blog entry consists only of text blocks (paragraphs) and images. Simplified as a scheme:</p>
 
                     <p>- - - - - - - - - - - - - - - - - - - - -<br />
                     |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Text container block&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |<br />
