site: Finalize e534f00ed6a581ef53bcc90209a241a2e051b481 LESSON III

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -346,6 +346,14 @@
 
                     <p><em>To be continued... (maybe...)</em></p>
 
+                    <p>Well, there isn't actually very much left to explain.</p>
+
+                    <p>We have blockquote containers to <em>cite</em> some other people words, or place code examples via the codesnippet editor form button. Both containers will provide the red magic line behaviour too. So once you have learned how the editor behaves, you know how to handle such new situations too. Both often more appear in comment entries, but are based on your blog topic.</p>
+
+                    <p>There only is "advanced" image left/right placements left, floated by your text. Just try it with some entry examples and with our "lorem ipsum" container text which is long enough for studies. Some Styx versions brought improvements for this behaviour and still do. It/You should be able at last, to just place your cursor in some text where you would like the floated image to start-up and the Editor-parsed source HTML should automatically break your current text <code>p</code> block apart and insert a left/right floatet <code>div</code> image block in-between. Checking the behaviour view by the Styx entryforms PREVIEW button will give an example idea how this is going to show-up in real life, your frontend blog.</p>
+
+                    <p>ENJOY your studies! 😁</p>
+
                     <p>&nbsp;</p>
 
                 </div>
