site: Add "after all" to 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -295,6 +295,8 @@
 
                     <p>So this <strong>red magic line</strong> (on hover) is the magic line of happiness. It is your friend to write good and clean and unbroken HTML code !</p>
 
+                    <p>Once you have settled your blog entries with containers in the way described in these two variants, or returning to an already posted blog entry, you will notice that each (image) container (and you will learn there will be some more), will provide a magic red line on hover to jump out. In this case for our first variant with the 5 images, after each single image container that has a next following image container. So not for the last, as it is followed by a text paragraph. Just watch out for them to appear when you re-edit a blog entry.</p>
+
                     <p>Paragraphed text containers are the gold Standard of writing structured text in the Internet of HTML. Using simple newlines per linebreak [Shift] + [ENTER], causing the single HTML <code>br</code>-tag are rare use cases.</p>
 
                     <p>Checking the written or added content by the RichText-Editors "Source" button will always quickly show you that you have worked the right way or not.</p>
