hc::en: Enable Toc "Using the RichText Editor"

--- a/hc/en/index.html
+++ b/hc/en/index.html
@@ -107,6 +107,7 @@
                     <li><a href="import-export.html">Import/Export</a></li>
                     <li><a href="installation.html">Installation/Upgrade</a></li>
                     <li><a href="categories.html">Managing categories</a></li>
+                    <li><a href="the-stockholm-lessons.html">Using the RichText Editor</a></li>
                     <li><a href="markup-plugins.html">Markup plugins</a></li>
                     <li><a href="using-plugins.html">Plugins</a></li>
                     <li><a href="posting-blog-entry.html">Posting Entries</a></li>
