hc::en: Enable "Guided Tour" links "Using the RichText Editor"
after markup plugins and before categories.

--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -99,7 +99,7 @@
                     <ul class="document-nav">
                         <li class="document-prev"><a href="posting-blog-entry.html"><span class="icon arrow-left">←</span>&nbsp;Posting Entries</a></li>
                         <li class="document-current">«&nbsp;Markup plugins&nbsp;»</li>
-                        <li class="document-next"><a href="categories.html">Categories&nbsp;<span class="icon arrow-right">→</span></a></li>
+                        <li class="document-next"><a href="the-stockholm-lessons.html">Using the RichText Editor&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Markup plugins</h2>
 
