hc::en: Add RichText Editor lessons nutshells

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -181,7 +181,7 @@
 
                     <div><picture><source srcset="/i/x/blog_entry_source_example.avif" type="image/avif"><source srcset="/i/x/blog_entry_source_example.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/blog_entry_source_example.png" width="800" height="360"></picture></div>
 
-                    <p><strong>In a nutshell:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the BACKSPACE-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use key RETURN followed by BACKSPACE to style that text part to a new <code>p</code>, even if you haven't cared about it right in the beginning.</p>
+                    <p class="nutshell"><span class="nut">🥥</span> <strong>In a nutshell:</strong> What you have learned so far, is: Using the RETURN-key ("ENTER") followed by the BACKSPACE-key enables text to live inside <code>p</code> paragraph container blocks. In every case you need to style your content, place the cursor at some text (block) start, then use key RETURN followed by BACKSPACE to style that text part to a new <code>p</code>, even if you haven't cared about it right in the beginning.</p>
 
                     <p>&nbsp;<a href="#" id="LLII"></a></p>
 
@@ -301,6 +301,8 @@
 
                     <p>Checking the written or added content by the RichText-Editors "Source" button will always quickly show you that you have worked the right way or not.</p>
 
+                    <div class="nutshell"><span class="nut">🥥</span> <strong>In a nutshell:</strong><ol><li>Keep (inner) nested self belonging containers in one.</li><li>Follow the magic red lights to get out containers.</li><li>When not available, the BACKSPACE and RETURN keyboard keys are your friends.</li><li>Don't trust the RichText mode w/o re-checking the "Source".</li><li>Keep "Source" view(s) clean, simple and separated.</li></ol></div>
+
                     <p>&nbsp;<a href="#" id="LLIII"></a></p>
 
                     <h3>The Stockholm Lecture Lesson III.</h3>
@@ -348,7 +350,7 @@
 
                     <p>You have learned that your RichText Editor is using the HTML element technique <code>p</code> for text paragraphs and <code>div</code> for other (nested) container blocks. So, if you find <code>&lt;p&gt;&amp;nbsp;&lt;/p&gt;</code> kind of source code parts in your current written blog entry, this is a paragraphed text block with <strong>one</strong> (<em>as HTML entity</em>) single space item (<em>since you need at least one</em>) waiting for the users next input. Now you also know where this single space item comes from, that we previously remove(d) with our BACKSPACE key action.<br>There actually is <strong>no</strong> real need to have and leave empty (but interpreted) containers like this in your blog entries, specifically at the very end. If you do it, then only for extra needed linespace separators.</p>
 
-                    <p><em>To be continued... (maybe...)</em></p>
+                    <div class="nutshell"><span class="nut">🥥</span> <strong>In a nutshell:</strong><ul><li>The Source is your friend. Delete and move containered items via "Source"-mode only.</li><li>Watch out for your own habituation and awareness learning and using (these) techniques.</li><li>Focus on the essence of your statement. What is the main message of your blog post? Is it text-based or image-based?</li><li>To avoid too much restyling and possible rumbles, start with adding the main parts first.</li></ul></div>
 
                     <p>Well, there isn't actually very much left to explain.</p>
 
