hc::en: Simplify 79709a09506c412f904b095d0aa86867bb9b7bdb [ff]

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -164,7 +164,7 @@
 
                     <p>Before you now add the text. Place your cursor where text would start at the beginning and hit the ENTER return key of your keyboard. You see that your editors line jumps down to a next position. Now, just use the BACKSPACE (delete) button of your keyboard, so the cursor jumps back to the first (starting position) line. As simple as that. This announces to the editor that you want to start with a paragraph.</p>
 
-                    <p>Paste in the Text (without formatting: [Shift] + [Command-Option] + [v]) and hit the editors "Source" button again. You can now see that your text is surrounded by <strong>p</strong> tags.</p>
+                    <p>Paste in the Text (again without formatting) and hit the editors "Source" button again. You can now see that your text is surrounded by <strong>p</strong> tags.</p>
 
                     <div><picture><source srcset="/i/x/Lorem_Ipsum_-_learn_p.avif" type="image/avif"><source srcset="/i/x/Lorem_Ipsum_-_learn_p.webp" type="image/webp"><img alt="" class="serendipity_image_center" loading="lazy" src="/i/x/Lorem_Ipsum_-_learn_p.png" width="800" height="225"></picture></div>
 
