--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -688,15 +688,15 @@
         <h4 class="plugin_summary">Display RSS-Feed in Backend Overview</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_backendrss</dt>
-            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2023-02-10)</dd>
-            <dd class="plugin_maintainers">Sebastian Nohn</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2023-09-07)</dd>
+            <dd class="plugin_maintainers">Sebastian Nohn, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
         <p class="plugin_description">Displays a RSS feed on the overview page (right after login) to the administration interface</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_backendrss.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_backendrss">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_backendrss" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_backendrss" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_backendrss/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
