book: Add is GMT info to entry timestamps of 4.4.2 - Einträge bearbeiten

--- a/book/index.html
+++ b/book/index.html
@@ -7245,7 +7245,9 @@ einer bekannten Artikelnummer oder zur Erstellung eines neuen Artikels.</p>
 Wenn rechts daneben das <span class="mbold">Uhrsymbol</span> steht, heißt dies, dass der
 Artikel seit seiner Erstellung mindestens einmal überarbeitet wurde. Wenn
 Sie mit der Maus über dieses Icon fahren (oder klicken), zeigt ein
-Info-Popup den Zeitpunkt der letzten Aktualisierung an.</p>
+Info-Popup den Zeitpunkt der letzten Aktualisierung an. Für beide hier gezeigten
+(timestamp) Zeitangaben gilt, dass sie in GMT Zeit angezeigt werden, d.h. nicht
+unbedingt ihrer lokalen Zeitzone bzw. dem eingestellten Offset entsprechen.</p>
 
 <figure id="fig-entries-list">
   <a class="lightbox" rel="lightbox" href="media/entries_dm_de.avif" lg-uid="lg4421" data-fallback="media/entries_dm_de.webp">
