book: Improve 421a919b359251492b382b2e2565cc4a1ab88e20 and another word

--- a/book/index.html
+++ b/book/index.html
@@ -7267,7 +7267,7 @@ Kategorien zugeordnet sein, werden alle Kategorienamen nach dem Autornamen
 aufgelistet. Ein Klick auf den Kategorienamen ruft die Frontend-Ansicht
 der jeweiligen Kategorie auf.</p>
 
-<p>Innerhalb der Box, die den Artikel anzeigt, werden auf der rechten Seite
+<p>Innerhalb der Zeile, die den Artikel anzeigt, werden auf der rechten Seite
 drei Buttons dargestellt. Der erste Button mit einer <em>Lupe</em>-Symbol zeigt
 bei einem Klick abhängig vom Veröffentlichungsstatus entweder die
 <span class="mbold">Ansicht</span> oder <span class="mbold">Vorschau</span>
@@ -7291,7 +7291,7 @@ Artikel gesammelt zu löschen.</p>
     <span class="inline-tag">Auswahl umkehren</span>
 </span>
 Der Button <span class="mbold">Auswahl umkehren</span> wird jeden gewählten Artikel
-de-selektieren und jeden de-selektierten Artikel wieder auswählen. Wenn
+de-selektieren und jeden nicht-selektierten Artikel wieder auswählen. Wenn
 Sie also einmal alle Artikel bis auf einen löschen wollen, markieren Sie
 nur diesen einen Artikel, klicken auf <span class="mbold">Auswahl umkehren</span>, wodurch
 automatisch die anderen Artikel ausgewählt werden, und können danach löschen.</p>
