hc::code-primer: Change for ophian/styx@2c5e54078f9e2b7553a2d090d6a45504f22f40fa up from Styx 4.3.3

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -484,7 +484,7 @@ print_r($entries);
   <li><code>$serendipity['convert']</code>: Path to ImageMagick binary</li>
   <li><code>$serendipity['thumbSuffix']</code>: Suffix to append to converted image thumbnails</li>
   <li><code>$serendipity['thumbSize']</code>: Maximum Thumbnail dimension</li>
-  <li><code>$serendipity['thumbConstraint']</code>: What to apply the maximum thumbnail dimension to</li>
+  <li><code>$serendipity['imageConstraint']</code>: What to apply the maximum thumbnail dimension to (renamed from 'thumbConstraint')</li>
   <li><code>$serendipity['maxFileSize']</code>: Maximum file size of uploaded files</li>
   <li><code>$serendipity['maxImgWidth']</code>: Maximum width for uploaded images</li>
   <li><code>$serendipity['maxImgHeight']</code>: Maximum height for uploaded images</li>
