book::CH04: Follow ophian/styx@5758844c64e8784ddc8115a353d5e7de74c5f458

--- a/book/index.html
+++ b/book/index.html
@@ -8991,7 +8991,7 @@ die weiter und immer weiter optimiert werden müssen.</p>
 
 <p>Auch wurde ein neuer Menüpunkt <span class="mbold">Konvertiere alte Vorschaubild-Namen</span>
 hinzugefügt, der es ermöglicht, einen Abgleich und Umschrieb der Mediendaten auf eine veränderte
-Vorschaubild-Endung durchzuführen, falls Sie sich mittendrin entscheiden sollten, die Serendipity
+Vorschaubild-Suffix durchzuführen, falls Sie sich mittendrin entscheiden sollten, die Serendipity
 <code>.serendipityThumb</code> oder Styx <code>.styxThumb</code> Standardeinstellung des
 Vorschaubild-"Präfixes" zu verändern.
 Diese Option ist solange nicht zu sehen, wie das bisherige <em>thumbSuffix</em> nicht geändert
@@ -12431,12 +12431,12 @@ bei der Vorschaubild-Erzeugung auftreten.</span>
 <p class="desc">
 <span class="label invisible" id="vorschaubildendung">Vorschaubildendung</span>
 <span class="tag-box invisible">
-    <span class="inline-tag">Konfiguration!Vorschaubild-Endung</span>
+    <span class="inline-tag">Konfiguration!Vorschaubild-Suffix</span>
     <span class="inline-tag">Thumbnails</span>
     <span class="inline-tag">serendipity-Thumb@styxThumb</span>
     <span class="inline-tag">serendipity-Thumb@serendipityThumb</span>
 </span><!-- tagbox -->
-<span class="item mbold">Vorschaubild-Endung</span><!-- menuitem -->
+<span class="item mbold">Vorschaubild-Suffix</span><!-- menuitem -->
 <span class="desc-info">
     <span class="box">
         Als Thumbnail bezeichnet man die Vorschaugrafiken, die Serendipity von
@@ -12451,7 +12451,7 @@ bei der Vorschaubild-Erzeugung auftreten.</span>
     </span>
 
     <span class="box">
-        Diesen Dateinamen können Sie über die Option <span class="mbold">Vorschaubild-Endung</span>
+        Diesen Dateinamen können Sie über die Option <span class="mbold">Vorschaubild-Suffix</span>
         selber festlegen. Wenn Sie den Dateinamen ändern und bereits Dateien
         in der Mediathek vorhanden sind, müssen Sie im Menü
         <span class="mbold">Mediathek</span> auf <span class="mbold">Vorschauen erneuern</span> klicken.
