book::CH04: Remove the underline in 66aa6807be637051db2e155074f8d9458b30247c

--- a/book/index.html
+++ b/book/index.html
@@ -12496,7 +12496,7 @@ bei der Vorschaubild-Erzeugung auftreten.</span>
 <span class="item mbold">Bestimmung der maximal erlaubten Bildgröße</span><!-- menuitem -->
 <span class="desc-info">
     <span class="box">
-        Legt fest, <b><u>wie</u></b> die Größe des Bildes beim Upload angepasst werden soll.
+        Legt fest, <b>wie</b> die Größe des Bildes beim Upload angepasst werden soll.
         Der Standard "Längste Seite" nutzt die größte Seite als Beschränkung,
         so dass weder Breite noch Höhe die festgelegte Zahl überschreiten dürfen.
         "Breite" und "Höhe" legen lediglich die Höhe bzw. Breite als größte Seite fest,
