Sync Spartacus legacy

--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -832,7 +832,7 @@
         <h4 class="plugin_summary">QuickNotes</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_adminnotes</dt>
-            <dd class="plugin_version">Version 0.34 (GPL, Last Updated 2023-12-26)</dd>
+            <dd class="plugin_version">Version 0.35 (GPL, Last Updated 2024-01-17)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -1009,6 +1009,22 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/legacy/serendipity_event_feed">GitHub</a></li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_adminnotes" class="plugin">
+        <h4 class="plugin_summary">QuickNotes</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_adminnotes</dt>
+            <dd class="plugin_version">Version 0.35 (GPL, Last Updated 2024-01-17)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
+        </dl>
+        <p class="plugin_description">Displays information for authors on the administration panel</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_adminnotes.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/legacy/serendipity_event_adminnotes">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_adminnotes" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/legacy/serendipity_event_adminnotes/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
